# nwafu-task-feishu

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_REPORT.md  SECURITY.md  SKILL.md  nwafu_task_feishu.py  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  test_schedule.py
